--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "tony.jpeg"
+  avatar           : "tony.png"
   name             : "TONY"
   pronouns         : # example: "she/her"  
   bio              : #"PhD student at Università della Svizzera italiana"
