--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "tony.png"
   name             : "TONY"
   pronouns         : # example: "she/her"  
-  bio              : #"PhD student at Università della Svizzera italiana"
+  bio              : "The code can be found on GitHub at "
   location         : #"Lugano, Switzerland"
   employer         : #"Red Brick University"
   uri              : # URL
